# watchdog

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: client.rs  main.rs  option.rs
deamon/: Cargo.toml
deamon/src/: main.rs
deamon/src/app/: app.rs  config.rs  containers.rs  error.rs  listener.rs  mod.rs  proxy.rs
deamon/systemd/: enviroment  watchdog.d
examples/config/: app.json
src/: main.rs
src/app/: app.rs  containers.rs  listener.rs  mod.rs  model.rs
systemd/: watchdog.d
