[package]
name = "watchdog"
version = "0.1.0"
authors = ["Vasyl <leveldorado@gmail.com>"]

[dependencies]


serde = "1.0.2"
serde_json = "1.0.2"
serde_derive = "1.0.2"
chrono = { version = "0.3", features = ["serde"] }
uuid = { version = "0.4", features = ["v4"] }
iron = "0.5.1"
router = "0.5.1"
bodyparser = "0.7.0"
bus = "1.3.0"