[package]
name = "watchdog"
version = "0.0.1"
authors = ["Vasyl <leveldorado@gmail.com>"]

[dependencies]


serde = "1.0.2"
serde_json = "1.0.2"
serde_derive = "1.0.2"
chrono = { version = "0.3", features = ["serde"] }
iron = "0.5.1"
router = "0.5.1"
bodyparser = "0.7.0"
lazy_static = "0.2.8"
hyper = "0.11"
futures = "0.1"
tokio-core="0.1.8"
lettre = "0.6.2"
urlencoded = "0.5.0"